--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "@sap/xssec": "^4",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
     "@cap-js/sqlite": "^1",
@@ -16,8 +18,12 @@
   "scripts": {
     "start": "cds-serve"
   },
-  "sapux": [
-    "app/admin-books",
-    "app/browse"
-  ]
+  "cds": {
+    "requires": {
+      "auth": "xsuaa"
+    },
+    "sql": {
+      "native_hana_associations": false
+    }
+  }
 }
