--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,7 @@
       "type": "shell",
       "label": "cds watch",
       "command": "cds",
-      "args": [
-        "watch"
-      ],
+      "args": ["watch"],
       "group": {
         "kind": "build",
         "isDefault": true
@@ -20,11 +18,7 @@
       "type": "shell",
       "label": "cds serve",
       "command": "cds",
-      "args": [
-        "serve",
-        "--with-mocks",
-        "--in-memory?"
-      ],
+      "args": ["serve", "--with-mocks", "--in-memory?"],
       "problemMatcher": []
     }
   ]
