--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@cap-js/hana": "^1"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.6",
     "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.6"
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve"
   },
+  "sapux": [
+    "app/admin-books",
+    "app/browse"
+  ],
   "cds": {
     "requires": {
       "auth": "xsuaa"
