--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "cds": {
     "requires": {
-      "auth": "xsuaa"
+      "auth": "xsuaa",
+      "db": "hana"
     },
     "sql": {
       "native_hana_associations": false
