--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   ],
   "cds": {
     "requires": {
-      "auth": "xsuaa",
-      "db": "hana"
+      "[production]": {
+        "db": "hana",
+        "auth": "xsuaa"
+      }
     },
     "sql": {
       "native_hana_associations": false
