switched preview on

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "app/browse"
   ],
   "cds": {
+    "features": {
+      "fiori_preview": true
+    },
     "requires": {
       "[production]": {
         "db": "hana",
