changed some stuff

--- a/app/admin-books/webapp/manifest.json
+++ b/app/admin-books/webapp/manifest.json
@@ -140,5 +140,9 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "cpappb.service"
   }
 }
